tests/error/connect_except.gw
#! [contains] UgenConnectException
UGen ref u;
adc => u;
